--- a/test.ipynb
+++ b/test.ipynb
@@ -6,6 +6,7 @@
       "name": "test.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,11 +88,7 @@
       "metadata": {
         "id": "29o6Pga0mjuJ",
         "colab_type": "code",
-        "outputId": "dbbe24f3-adc4-4e77-a275-a84b71879da2",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 544
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -177,45 +174,7 @@
         ")"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n",
-            "x_train shape: (60000, 28, 28, 1)\n",
-            "60000 train samples\n",
-            "10000 test samples\n",
-            "Train on 60000 samples, validate on 10000 samples\n",
-            "Epoch 1/12\n",
-            "60000/60000 [==============================] - 9s 156us/step - loss: 0.2678 - acc: 0.9180 - val_loss: 0.0661 - val_acc: 0.9782\n",
-            "Epoch 2/12\n",
-            "60000/60000 [==============================] - 9s 143us/step - loss: 0.0913 - acc: 0.9730 - val_loss: 0.0431 - val_acc: 0.9862\n",
-            "Epoch 3/12\n",
-            "60000/60000 [==============================] - 9s 144us/step - loss: 0.0658 - acc: 0.9800 - val_loss: 0.0356 - val_acc: 0.9879\n",
-            "Epoch 4/12\n",
-            "60000/60000 [==============================] - 9s 144us/step - loss: 0.0567 - acc: 0.9835 - val_loss: 0.0310 - val_acc: 0.9900\n",
-            "Epoch 5/12\n",
-            "60000/60000 [==============================] - 9s 143us/step - loss: 0.0481 - acc: 0.9852 - val_loss: 0.0341 - val_acc: 0.9887\n",
-            "Epoch 6/12\n",
-            "60000/60000 [==============================] - 9s 144us/step - loss: 0.0421 - acc: 0.9875 - val_loss: 0.0285 - val_acc: 0.9900\n",
-            "Epoch 7/12\n",
-            "60000/60000 [==============================] - 9s 147us/step - loss: 0.0395 - acc: 0.9879 - val_loss: 0.0270 - val_acc: 0.9910\n",
-            "Epoch 8/12\n",
-            "60000/60000 [==============================] - 9s 146us/step - loss: 0.0360 - acc: 0.9893 - val_loss: 0.0296 - val_acc: 0.9901\n",
-            "Epoch 9/12\n",
-            "60000/60000 [==============================] - 9s 143us/step - loss: 0.0333 - acc: 0.9898 - val_loss: 0.0297 - val_acc: 0.9906\n",
-            "Epoch 10/12\n",
-            "60000/60000 [==============================] - 9s 143us/step - loss: 0.0310 - acc: 0.9902 - val_loss: 0.0286 - val_acc: 0.9912\n",
-            "Epoch 11/12\n",
-            "60000/60000 [==============================] - 9s 144us/step - loss: 0.0293 - acc: 0.9907 - val_loss: 0.0278 - val_acc: 0.9916\n",
-            "Epoch 12/12\n",
-            "60000/60000 [==============================] - 9s 143us/step - loss: 0.0277 - acc: 0.9916 - val_loss: 0.0277 - val_acc: 0.9906\n",
-            "Test loss: 0.02773621796219486\n",
-            "Test accuracy: 0.9906\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
