--- a/dscnn_work1.ipynb
+++ b/dscnn_work1.ipynb
@@ -33,7 +33,20 @@
       },
       "cell_type": "code",
       "source": [
-        "!rm -r work\n"
+        "!rm -r work"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "PPUPTSbituY_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!rm -r ML-KWS-for-MCU"
       ],
       "execution_count": 0,
       "outputs": []
@@ -46,7 +59,7 @@
       },
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/ARM-software/ML-KWS-for-MCU\n",
+        "!git clone https://github.com/villasen/ML-KWS-for-MCU.git\n",
         "  "
       ],
       "execution_count": 0,
@@ -54,18 +67,13 @@
     },
     {
       "metadata": {
-        "id": "L833M4ZSVClY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "oFlm555ct7pP",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!python ML-KWS-for-MCU/train.py --model_architecture ds_cnn --model_size_info 5 64 10 4 2 2 64 3 3 1 1 64 3 3 1 1 64 3 3 1 1 64 3 3 1 1 --dct_coefficient_count 10 \\\n",
-        "--window_size_ms 40 --window_stride_ms 20 --learning_rate 0.0005,0.0001,0.00002 --how_many_training_steps 5000,3000,2000 --summaries_dir work/DS_CNN/DS_CNN1/retrain_logs \\\n",
-        "--train_dir work/DS_CNN/DS_CNN1/training --wanted_words=on,bed,cat,dog,down,eight,five,follow,off,four \n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "Train with default word set"
+      ]
     },
     {
       "metadata": {
@@ -84,6 +92,65 @@
     },
     {
       "metadata": {
+        "id": "71VirOXNuHry",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Train with alternate word set"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "L833M4ZSVClY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!python ML-KWS-for-MCU/train.py --model_architecture ds_cnn --model_size_info 5 64 10 4 2 2 64 3 3 1 1 64 3 3 1 1 64 3 3 1 1 64 3 3 1 1 --dct_coefficient_count 10 \\\n",
+        "--window_size_ms 40 --window_stride_ms 20 --learning_rate 0.0005,0.0001,0.00002 --how_many_training_steps 5000,3000,2000 --summaries_dir work/DS_CNN/DS_CNN1/retrain_logs \\\n",
+        "--train_dir work/DS_CNN/DS_CNN1/training --wanted_words=on,bed,cat,dog,down,eight,five,follow,off,four \n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "kAHyGtmfuUsx",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Test model"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "2GBX9LXttqUG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!python ML-KWS-for-MCU/test.py --data_dir=/tmp/speech_dataset/ --model_architecture ds_cnn --model_size_info 5 64 10 4 2 2 64 3 3 1 1 64 3 3 1 1 64 3 3 1 1 64 3 3 1 1 \\\n",
+        "-dct_coefficient_count 10 --window_size_ms 40 --window_stride_ms 20 --checkpoint work/DS_CNN/DS_CNN1/training/best/ds_cnn_9019.ckpt-3600\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ozFTretQuXQB",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Freeze graph to protobuf file"
+      ]
+    },
+    {
+      "metadata": {
         "id": "W66vd6KnVerY",
         "colab_type": "code",
         "colab": {}
@@ -99,17 +166,13 @@
     },
     {
       "metadata": {
-        "id": "2GBX9LXttqUG",
-        "colab_type": "code",
-        "colab": {}
+        "id": "lNahajMeudXH",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!python ML-KWS-for-MCU/test.py --data_dir=/tmp/speech_dataset/ --model_architecture ds_cnn --model_size_info 5 64 10 4 2 2 64 3 3 1 1 64 3 3 1 1 64 3 3 1 1 64 3 3 1 1 \\\n",
-        "-dct_coefficient_count 10 --window_size_ms 40 --window_stride_ms 20 --checkpoint work/DS_CNN/DS_CNN1/training/best/ds_cnn_9019.ckpt-3600\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "Fold Batchnorm (needed for quantization of ds-cnn)"
+      ]
     },
     {
       "metadata": {
@@ -128,6 +191,16 @@
     },
     {
       "metadata": {
+        "id": "vueY3Jh1upj0",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Quantize model to weights.h file"
+      ]
+    },
+    {
+      "metadata": {
         "id": "H5qnlEqUJf1C",
         "colab_type": "code",
         "colab": {}
@@ -142,6 +215,16 @@
     },
     {
       "metadata": {
+        "id": "HG-LhQsWuzHG",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Download weights.h"
+      ]
+    },
+    {
+      "metadata": {
         "id": "9VKYI14OMo5c",
         "colab_type": "code",
         "colab": {}
@@ -151,6 +234,34 @@
         "from google.colab import files\n",
         "\n",
         "files.download('weights.h')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "kCJVWFNmu4pE",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Download model as tar file"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "mF5o-2mZbYpE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!tar -cvf dscnn__defaultDataset_4000.tar /content/work/\n",
+        "!ls -l\n",
+        "\n",
+        "from google.colab import files\n",
+        "\n",
+        "files.download('dscnn__defaultDataset_4000.tar')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -180,24 +291,6 @@
       "source": [
         "!cp /content/work/DS_CNN/DS_CNN1/training/ds_cnn.pbtxt /content/temp/\n",
         "!ls /content/temp/"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "mF5o-2mZbYpE",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "!tar -cvf dscnn__defaultDataset_4000.tar /content/work/\n",
-        "!ls -l\n",
-        "\n",
-        "from google.colab import files\n",
-        "\n",
-        "files.download('dscnn__defaultDataset_4000.tar')"
       ],
       "execution_count": 0,
       "outputs": []
