--- a/downsample_wav.ipynb
+++ b/downsample_wav.ipynb
@@ -33,7 +33,7 @@
       },
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/villasen/ML-KWS-for-MCU.git"
+        "!git clone https://github.com/villasen/Sound-Datasets.git"
       ],
       "execution_count": 0,
       "outputs": []
@@ -46,7 +46,7 @@
       },
       "cell_type": "code",
       "source": [
-        "!rm -r /content/output"
+        "!rm -r /content/downsampled_data_set"
       ],
       "execution_count": 0,
       "outputs": []
@@ -62,16 +62,16 @@
         "import os\n",
         "import librosa\n",
         "\n",
-        "os.chdir('/content/ML-KWS-for-MCU/Urban_dataset/')\n",
+        "os.chdir('/content/Sound-Datasets/ESC-50/')\n",
         "\n",
         "for root, dirs, files in os.walk('.'):\n",
         "  label = root.lstrip('./')\n",
-        "  path = '/content/output/' + label\n",
+        "  path = '/content/downsampled_data_set/' + label\n",
         "  print(path)\n",
         "  os.mkdir(path)\n",
         "  for file in files:\n",
         "    y, sr = librosa.load(label + '/' + file, sr=8000, mono=True, offset=0.0, duration=5.0)\n",
-        "    librosa.output.write_wav('/content/output/' + label + '/' + file, y, sr)\n",
+        "    librosa.output.write_wav('/content/downsampled_data_set/' + label + '/' + file, y, sr)\n",
         "    print(file)\n",
         "    \n",
         "os.chdir('/content/')"
@@ -90,11 +90,8 @@
         "import os\n",
         "os.chdir('/content/')\n",
         "\n",
-        "!tar -cvf downsampled_data_set.tar output/\n",
-        "!ls -l\n",
-        "\n",
-        "from google.colab import files\n",
-        "files.download('/content/downsampled_data_set.tar')"
+        "!tar -zcf downsampled_data_set.tar.gz output/\n",
+        "!ls -l"
       ],
       "execution_count": 0,
       "outputs": []
