--- a/downsample_wav.ipynb
+++ b/downsample_wav.ipynb
@@ -27,6 +27,19 @@
     },
     {
       "metadata": {
+        "id": "Gd9aCX62Gf7o",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!rm -r /content/Sound-Datasets"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "vjx8szL6ub52",
         "colab_type": "code",
         "colab": {}
@@ -53,14 +66,30 @@
     },
     {
       "metadata": {
+        "id": "b0mEXdbGehrQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!pip install soundfile"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "IYRwx2MEy8ul",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
+        "!rm -r /content/downsampled_data_set\n",
+        "\n",
         "import os\n",
         "import librosa\n",
+        "import soundfile\n",
         "\n",
         "os.chdir('/content/Sound-Datasets/ESC-50/')\n",
         "\n",
@@ -70,9 +99,9 @@
         "  print(path)\n",
         "  os.mkdir(path)\n",
         "  for file in files:\n",
-        "    y, sr = librosa.load(label + '/' + file, sr=8000, mono=True, offset=0.0, duration=5.0)\n",
-        "    librosa.output.write_wav('/content/downsampled_data_set/' + label + '/' + file, y, sr)\n",
-        "    print(file)\n",
+        "    # print(file)\n",
+        "    data, sr = librosa.core.load(label + '/' + file, sr=8000, mono=True)\n",
+        "    soundfile.write('/content/downsampled_data_set/' + label + '/' + file, data, sr, 'PCM_16')\n",
         "    \n",
         "os.chdir('/content/')"
       ],
@@ -90,7 +119,7 @@
         "import os\n",
         "os.chdir('/content/')\n",
         "\n",
-        "!tar -zcf downsampled_data_set.tar.gz output/\n",
+        "!tar -zcf downsampled_data_set.tar.gz downsampled_data_set/\n",
         "!ls -l"
       ],
       "execution_count": 0,
